HFP-2620 Fix resizing overflowing interactions in static scene
Fix stuck dragging logic by listening to window instead of body

--- a/scripts/components/Scene/SceneTypes/StaticScene.scss
+++ b/scripts/components/Scene/SceneTypes/StaticScene.scss
@@ -8,7 +8,7 @@
   display: flex;
 
   .image-scene-wrapper {
-    display: block;
+    display: inline-flex;
     margin: auto;
     position: relative;
     width: 100%;
