--- a/scripts/components/Shared/NavigationButton.scss
+++ b/scripts/components/Shared/NavigationButton.scss
@@ -3,6 +3,7 @@
 
 .nav-button-wrapper {
   position: absolute;
+  display: inline-flex;
 }
 
 .nav-button {
